examples/errors/part2_semantic1_binary_operator_invalid1.lya
dcl a int = 2; // Ok
dcl b char = 3; // Error. 3 is not char